# FABLE-explorer

./: .gitignore  AesopV1.ipynb  Data_UP49.xlsx  FableVisualizerV4_AllPathwaysRunner.py  FableVisualizerV4_Comparison.py  FableVisualizerV4_Dashboard.py  FableVisualizerV4_Launcher.py  LICENSE  Launch_Dashboard.bat  Launch_FableVisualizerV4_Dashboard.bat  Launch_FableVisualizerV4_Launcher.bat  Launch_Launcher.bat  MANDATORY_Update_Packages_x49.docx  README.md  config.yaml  fable.py  launch_dashboard.sh  launch_launcher.sh  pyproject.toml  requirements.txt  run_fable_analysis.py  scenario_deviation_summary.csv
.claude/: settings.local.json
FABLE-Python Visualizer V2.5 mini/: FABLE_Python_VisualiserV2.5Mini.ipynb
FABLE_Python_VisualiserV3.0/: FABLE_Python_VisualiserV3.0.ipynb
FableReportGen/: FableReportGen.py  Launch_FableReportGen.bat
FableVisualizerV4/: .gitignore  FableVisualizerV4_AllPathwaysRunner.ipynb  README.md
docs/: comparisons.md  overview.md  usage.md
notebooks/: runner.ipynb
src/: dashboard.py  launcher.py  runner.py
