[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fable-postprocessing"
version = "1.0.0"
description = "Cross-platform post-processing and visualization tools for any FABLE country workbook"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.0",
    "plotly>=5.0",
    "streamlit>=1.30",
    "xlwings>=0.30",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pyright>=1.1",
]

[project.urls]
Repository = "https://github.com/FABLE-Consortium/FABLE_Pakistan"

[tool.setuptools]
# No installable Python packages — project provides runnable scripts in src/
packages = []

[tool.pyright]
extraPaths = ["src"]
pythonVersion = "3.9"
